# dotfiles

./: .bashrc_darwin  .chezmoi.toml.tmpl  .chezmoidata.toml  .chezmoiexternal.toml  .chezmoiignore  .gitattributes  .gitignore  .run_once_install-packages.sh  .zshrc_darwin  .zshrc_fedora  .zshrc_linux  .zshrc_ubuntu  README.md  create_dot_gitconfig  create_dot_gitconfig.tmpl  dot_Brewfile  dot_bashrc.tmpl  dot_condarc  dot_gitconfig.tmpl  dot_gitignore_global  dot_gitmessage  dot_ideavimrc  dot_tmux.conf  dot_tmux.conf.tmpl  dot_vimrc  dot_vsvimrc  dot_wslconfig  dot_zshrc  dot_zshrc.tmpl  executable_modkeys.sh  run_once_install-packages.ps1  run_once_install-packages.sh  symlink_dot_zshrc.tmpl
.chezmoiexternals/: .Eisvogel.toml  .glsl_analyzer.toml  .neovim-nightly.toml  .pdf2text.toml  .yazi.toml  Eisvogel.toml  QuickSwitch.toml  doomemacs.toml  im-select.toml  neovim.toml  oh-my-zsh-plugins.toml  oh-my-zsh.toml  on-my-zsh.toml  ranger_devicons.toml  rime-ice.toml  rime.toml  tmux.toml
.chezmoiscripts/: run_once_oh_my_zsh.sh.tmpl
.install_scripts/: run_once_install_emsdk.sh.tmpl  run_once_install_vcpkg.sh.tmpl
AppData/Local/: symlink_clangd.tmpl  symlink_lf.tmpl  symlink_nvim.mini.tmpl  symlink_nvim.tmpl
AppData/Roaming/: symlink_Rime.tmpl  symlink_Zed.tmpl  symlink_alacritty.tmpl  symlink_bottom.tmpl  symlink_dot_emacs.d.tmpl  symlink_lazydocker.tmpl  symlink_neovide.tmpl
Documents/PowerShell/: Microsoft.PowerShell_profile.ps1  PSReadline_config.ps1  Utilities.ps1  create_Local.ps1  symlink_Microsoft.PowerShell_profile.ps1.tmpl  symlink_Utilities.ps1.tmpl
Documents/WindowsPowerShell/: Microsoft.PowerShell_profile.ps1  symlink_PSReadline_config.ps1.tmpl
dot_claude/exact_skills/: symlink_neovim-config.tmpl
dot_config/: starship.toml  symlink_nvim.tmpl
dot_config/AutoHotkey/: DisableWinL.ahk  MyKeyMappings_Win.ahk  MyKeyMappings_Win.ahk2  MyKeyMappings_Win_1.1.ahk  MyKeyMappings_Win_2.0.ahk  WindowStackInTray.ahk
dot_config/PowerShell/: Microsoft.PowerShell_profile.ps1  PSReadline_config.ps1  Utilities.ps1  create_Environment.ps1.tmpl
dot_config/Rime/: .chezmoiignore  custom_phrase.txt  default.custom.yaml  pin_candidate.yaml  rime_ice.custom.yaml  rime_ice_custom.dict.yaml  squirrel.custom.yaml  weasel.custom.yaml
dot_config/VisualStudio/: Exported.vssettings
dot_config/alacritty/: alacritty.toml
dot_config/bilibili_evolved/: settings.json
dot_config/bottom/: create_bottom.toml
dot_config/chezmoi/: create_chezmoi.toml
dot_config/clangd/: config.yaml.tmpl
dot_config/emacs/: AGENTS.md  README.md  config.el  create_local.el  early-init.el  init.el
dot_config/fish/: config.fish
dot_config/fzf/: executable_rgv  fzf_config.zsh
dot_config/i3/: config
dot_config/lazydocker/: config.yml
dot_config/lazygit/: config.yml
dot_config/lf/: .lfrc_darwin  .lfrc_windows  lfrc  lfrc.tmpl
dot_config/neocmakelsp/: lint.toml
dot_config/neovide/: config.toml.tmpl
dot_config/nushell/: config.nu  env.nu  login.nu  utils.nu
dot_config/nvim/: coc-settings.json  coc-settings.json.tmpl  executable_init.vim  init.lua  init.vim
dot_config/nvim.coc/: coc-settings.json.tmpl  executable_execute_python.sh  init.vim
dot_config/nvim.coc/template/: CMakeLists.txt  template.cpp
dot_config/nvim.lazyvim/: symlink_snippets.tmpl  symlink_template.tmpl  symlink_vimspector_conf.tmpl
dot_config/nvim.mini/: init.lua  nvim-pack-lock.json
dot_config/nvim.old/: coc-settings.json.tmpl  init.vim
dot_config/nvim/template/: .clangd  CMakeLists.txt  CMakePresets.json  symlink_snippets.tmpl  template.cpp  template.md  template.norg  template.qmd
dot_config/nvim/template/snippets/: cpp.json  lua.json  markdown.json  package.json
dot_config/ranger/: .rc.conf_darwin  .rc.conf_linux  create_rc.conf  rc.conf.tmpl
dot_config/sioyek/: keys_user.config.tmpl  prefs_user.config.tmpl
dot_config/ty/: ty.toml
dot_config/ueberzugpp/: config.json
dot_config/vscode/: trailing_cursor.js
dot_config/wezterm/: keymaps.lua  tools.lua  wezterm.lua
dot_config/yazi/: init.lua  keymap.toml  keymap.toml.tmpl  theme.toml  yazi.toml
dot_config/zed/: create_private_settings.json  keymap.json  private_settings.json
dot_config/zellij/: config.kdl.tmpl
dot_local/scripts/: executable_ai-commit-msg  executable_nvim-client  executable_nvim-rime  executable_nvim-server
dot_vim/: autocmds.vim  basic_statusline.vim  create_local_config.vim  keymaps.vim  options.vim  plugins.vim  projectloader.vim  utils.vim  vimrc  vimrc_minimal  vimrc_minimal.tmpl
dot_vim/compiler/: shell.vim  xmake-build.vim
dot_vim/exact_lsp/: lsp_config.json
dot_vim/exact_plugins-conf/: ale.vim  explorer.vim  fzf.vim  jump.vim  project.vim  vimcomplete.vim
dot_vim/lsp/: lspinstaller.vim
dot_vim/plugins/: ale.vim  edit.vim  floaterm.vim  fzf.vim  jump.vim  (+8 more)
dot_vim/plugins-conf/: ale.vim  edit.vim  floaterm.vim  fzf.vim  lsp.vim  statusline.vim  theme.vim
dot_vim/plugins-decl/: ale.vim  edit.vim  explorer.vim  floaterm.vim  fzf.vim  jump.vim  lsp.vim  project.vim  statusline.vim  theme.vim  vimcomplete.vim
dot_zshrc.conf/: create_env.zsh.tmpl  create_local.zsh  custom.zsh  custom.zsh.tmpl  dev.zsh  dev.zsh.tmpl  helper.zsh  homebrew.zsh.tmpl  omz.zsh  plugins.zsh  plugins.zsh.tmpl  wsl.zsh  zshrc_darwin  zshrc_fedora  zshrc_linux  zshrc_opensuse  zshrc_ubuntu
dot_zshrc.d/: create_env.zsh  create_env.zsh.tmpl  custom.zsh.tmpl  dev.zsh.tmpl  helper.zsh  homebrew.zsh.tmpl  omz.zsh  plugins.zsh.tmpl  wsl.zsh  zshrc_arch  zshrc_clean  zshrc_darwin  zshrc_fedora  zshrc_linux  zshrc_minimal  zshrc_opensuse  zshrc_tencentos  zshrc_ubuntu
private_dot_ssh/: create_config.tmpl
scripts/: auto-install-latex.sh.tmpl  compare_dirs.ps1  executable_previewer.sh  executable_previewer_macos.sh  lf_previewer.py  link_path.py  previewer.bat  previewer.ps1  previewer.sh  requirements.txt
template/: dot_marksman.toml
template/cmake_project/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  dot_clang-format  dot_clang-tidy  dot_clangd  dot_gitignore
template/cmake_project/cmake/: helpers.cmake.tmpl
(+342 files in other folders)
